--- a/Untitled28.ipynb
+++ b/Untitled28.ipynb
@@ -2484,6 +2484,21 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We use SVM for modeling:\n",
+        "\n",
+        "Similar Accuracy: SVM has a slightly lower accuracy (0.705609) compared to Random Forest (0.698821), but it's still a very good model.\n",
+        "\n",
+        "Higher Precision: SVM has a higher precision (0.742777) than Random Forest (0.721268), which means it's better at avoiding false positives.\n",
+        "\n",
+        "Lower Recall: However, SVM has a lower recall (0.696629) compared to Random Forest (0.721745), which means it's not as good at detecting \n",
+        "\n",
+        "true positives."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "k1kuJl8gVrV-"
       },
